services/kube-prometheus-stack/manifests/route_prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: prometheus
  name: prometheus-route
spec:
  parentRefs:
  - name: infra-envoy-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prometheus
    backendRefs:
    - name: prom-kube-prometheus-stack-prometheus
      port: 9090
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
